[gd_scene load_steps=28 format=3 uid="uid://dniscs7pmoue0"]

[ext_resource type="Script" uid="uid://bu7nj38ak8ban" path="res://Scenes/Player/PlayerStateManager.gd" id="2_7t7oy"]
[ext_resource type="Script" uid="uid://d163vp4a4iuuc" path="res://Scenes/Player/PlayerIdle.gd" id="3_0l8a3"]
[ext_resource type="Script" uid="uid://b88nn2rkq83u5" path="res://Scenes/Player/PlayerMoving.gd" id="4_7t7oy"]
[ext_resource type="Texture2D" uid="uid://bcwdf3ftnacns" path="res://BlenderFiles/Raccoon_sprite_sheet.PNG" id="5_35hnj"]
[ext_resource type="Script" uid="uid://cq54u7bx5a3rv" path="res://Scenes/Player/PlayerSearching.gd" id="5_mxtes"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4wuc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_35hnj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mxtes"]
radius = 37.0135

[sub_resource type="Animation" id="Animation_3x3s5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4nkex"]
resource_name = "walk_E"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_npew5"]
resource_name = "walk_up"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_35hnj"]
resource_name = "walk_NE"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_s0ore"]
resource_name = "walk_NW"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_hrsgf"]
resource_name = "walk_S"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_k34dh"]
resource_name = "walk_SE"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_37a1h"]
resource_name = "walk_SW"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49, 50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_cd7s0"]
resource_name = "walk_W"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59, 60, 61, 62]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4nkex"]
_data = {
&"RESET": SubResource("Animation_3x3s5"),
&"walk_E": SubResource("Animation_4nkex"),
&"walk_N": SubResource("Animation_npew5"),
&"walk_NE": SubResource("Animation_35hnj"),
&"walk_NW": SubResource("Animation_s0ore"),
&"walk_S": SubResource("Animation_hrsgf"),
&"walk_SE": SubResource("Animation_k34dh"),
&"walk_SW": SubResource("Animation_37a1h"),
&"walk_W": SubResource("Animation_cd7s0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_35hnj"]
animation = &"walk_N"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_npew5"]
animation = &"walk_NE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3x3s5"]
animation = &"walk_E"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4nkex"]
animation = &"walk_SE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k34dh"]
animation = &"walk_S"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hrsgf"]
animation = &"walk_SW"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_37a1h"]
animation = &"walk_W"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cd7s0"]
animation = &"walk_NW"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_s0ore"]
blend_point_0/node = SubResource("AnimationNodeAnimation_35hnj")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_npew5")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3x3s5")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_4nkex")
blend_point_3/pos = Vector2(1, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_k34dh")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_hrsgf")
blend_point_5/pos = Vector2(-1, -1)
blend_point_6/node = SubResource("AnimationNodeAnimation_37a1h")
blend_point_6/pos = Vector2(-1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_cd7s0")
blend_point_7/pos = Vector2(-1, 1)
snap = Vector2(1, 1)
blend_mode = 1
sync = true

[node name="RaccoonController" type="CharacterBody2D"]
collision_layer = 32769
collision_mask = 32769

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RaccoonCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x4wuc")

[node name="NoiseChecker" type="Area2D" parent="."]

[node name="NoiseCollision" type="CollisionShape2D" parent="NoiseChecker"]
shape = SubResource("CircleShape2D_35hnj")

[node name="InteractableChecker" type="Area2D" parent="."]

[node name="InteractableCollision" type="CollisionShape2D" parent="InteractableChecker"]
shape = SubResource("CircleShape2D_mxtes")

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("interactableChecker", "noiseChecker", "initialState")]
script = ExtResource("2_7t7oy")
interactableChecker = NodePath("../InteractableChecker")
noiseChecker = NodePath("../NoiseChecker")
initialState = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateManager" node_paths=PackedStringArray("movingState", "searchingState")]
script = ExtResource("3_0l8a3")
movingState = NodePath("../PlayerMoving")
searchingState = NodePath("../PlayerSearching")

[node name="PlayerMoving" type="Node" parent="StateManager" node_paths=PackedStringArray("idleState", "searchingState")]
script = ExtResource("4_7t7oy")
idleState = NodePath("../PlayerIdle")
searchingState = NodePath("../PlayerSearching")

[node name="PlayerSearching" type="Node" parent="StateManager" node_paths=PackedStringArray("idleState", "movingState")]
script = ExtResource("5_mxtes")
idleState = NodePath("../PlayerIdle")
movingState = NodePath("../PlayerMoving")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_35hnj")
hframes = 9
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4nkex")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendSpace2D_s0ore")
anim_player = NodePath("../AnimationPlayer")
parameters/blend_position = Vector2(-0.00172514, 0.998379)

[connection signal="body_entered" from="InteractableChecker" to="StateManager" method="InteractableReady"]
[connection signal="body_exited" from="InteractableChecker" to="StateManager" method="InteractableUnready"]
